## Copyright (C) 2010- Alexey Petrov
## Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
## 
## See http://sourceforge.net/projects/pythonflu
##
## Author : Alexey PETROV
##


#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([test], [0.1], [alexey.petrov.nnov@gmail.com], [test])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])


echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
MANAGEDFLU_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_BOOST_SHARED_PTR
echo

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PYTHON
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OS
echo 


echo "---------------------------- mandatory products --------------------------------"
CONFFLU_PRINT_SUMMURY( "openfoam_ok boost_shared_ptr_ok" )
echo
echo "--------------------------------------------------------------------------------"
CONFFLU_CHECK_MANDATORY( "openfoam_ok boost_shared_ptr_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ bashrc \
	     libs/managedFlu/Make/options \
	     libs/OpenFOAM/Make/options \
	     libs/finiteVolume/Make/options \
	     libs/thermophysicalModels/basic/Make/options \
	     libs/thermophysicalModels/radiationModel/Make/options \
	     libs/transportModels/incompressible/Make/options \
	     libs/common.hpp \
	     libs/turbulenceModels/compressible/turbulenceModel/Make/options \
	     libs/turbulenceModels/compressible/RAS/Make/options \
	     libs/turbulenceModels/incompressible/turbulenceModel/Make/options \
	     libs/turbulenceModels/incompressible/RAS/Make/options \
     	     solvers/heatTransfer/buoyantBoussinesqSimpleFoam/Make/options \
	     solvers/heatTransfer/buoyantSimpleRadiationFoam/Make/options \
	     solvers/heatTransfer/buoyantSimpleFoam/Make/options \
	     solvers/heatTransfer/buoyantPimpleFoam/Make/options \
	     solvers/heatTransfer/chtMultiRegionFoam/Make/options \
	     solvers/incompressible/icoFoam/Make/options \
	     solvers/incompressible/simpleFoam/Make/options \
	     solvers/compressible/sonicFoam/Make/options \
	     solvers/compressible/sonicLiquidFoam/Make/options \
	     unitaryTests/testField/Make/options \
	     unitaryTests/testMatrix/Make/options \
     	     unitaryTests/testMeshDictField/Make/options \
	     Makefile ] )


echo "------------------------------------ OK -----------------------------------------"

