# managedFlu - OpenFOAM C++ interactive functionality API
# Copyright (C) 2011- Alexey Petrov
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# See http://sourceforge.net/projects/pythonflu
#
# Author : Alexey PETROV, Andrey Simurzin

#--------------------------------------------------------------------------------------
# Process this file with autoconf to produce a configure script
#--------------------------------------------------------------------------------------
AC_INIT([managedFlu], [1.0], [alexey.petrov.nnov@gmail.com], [managedflu])

# AC_CONFIG_AUX_DIR defines an alternative directory where to find the auxiliary
# scripts such as config.guess, install-sh, ...
AC_CONFIG_AUX_DIR(admin)
AC_CONFIG_MACRO_DIR([admin])
AM_INIT_AUTOMAKE([tar-pax -Wno-portability])


echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
MANAGEDFLU_CHECK_OPENFOAM
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_BOOST_SHARED_PTR
echo

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PYTHON
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_OS
echo

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PROJECT_VERSION1
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_PGP_KEY_ID
echo 

echo "--------------------------------------------------------------------------------------"
CONFFLU_CHECK_INSTALL
echo 

echo "---------------------------- mandatory products --------------------------------"
CONFFLU_PRINT_SUMMURY( "openfoam_ok boost_shared_ptr_ok" )
echo
echo "--------------------------------------------------------------------------------"
CONFFLU_CHECK_MANDATORY( "openfoam_ok boost_shared_ptr_ok" )


#--------------------------------------------------------------------------------------
AC_OUTPUT( [ bashrc \
             src/managedFlu/Makefile \
             src/OpenFOAM/Makefile \
             src/finiteVolume/Makefile \
             src/dynamicFvMesh/Makefile \
             src/randomProcesses/Makefile \
             src/thermophysicalModels/basic/Makefile \
             src/thermophysicalModels/basicSolidThermo/Makefile \
             src/thermophysicalModels/radiationModel/Makefile \
             src/transportModels/incompressible/Makefile \
             src/transportModels/interfaceProperties/Makefile \
             src/common.hpp \
             src/turbulenceModels/compressible/turbulenceModel/Makefile \
             src/turbulenceModels/compressible/RAS/Makefile \
             src/turbulenceModels/incompressible/turbulenceModel/Makefile \
             src/turbulenceModels/incompressible/RAS/Makefile \
             src/turbulenceModels/incompressible/LES/Makefile \
             solvers/basic/laplacianFoam/Makefile \
             solvers/basic/potentialFoam/Makefile \
             solvers/basic/scalarTransportFoam/Makefile \
             solvers/heatTransfer/buoyantBoussinesqSimpleFoam/Makefile \
             solvers/heatTransfer/buoyantSimpleRadiationFoam/Makefile \
             solvers/heatTransfer/buoyantSimpleFoam/Makefile \
             solvers/heatTransfer/buoyantPimpleFoam/Makefile \
             solvers/heatTransfer/chtMultiRegionFoam/Makefile \
             solvers/incompressible/boundaryFoam/Makefile \
             solvers/incompressible/channelFoam/Makefile \
             solvers/incompressible/icoFoam/Makefile \
             solvers/incompressible/nonNewtonianIcoFoam/Makefile \
             solvers/incompressible/pimpleFoam/Makefile \
             solvers/incompressible/pimpleDyMFoam/Makefile \
             solvers/incompressible/pisoFoam/Makefile \
             solvers/incompressible/simpleFoam/Makefile \
             solvers/incompressible/porousSimpleFoam/Makefile \
             solvers/incompressible/shallowWaterFoam/Makefile \
             solvers/compressible/rhoCentralFoam/Makefile \
             solvers/compressible/rhoCentralFoam/BCs/Make/options \
             solvers/compressible/sonicFoam/Makefile \
             solvers/compressible/rhoPimpleFoam/Makefile \
             solvers/compressible/rhoPorousMRFPimpleFoam/Makefile \
             solvers/compressible/sonicLiquidFoam/Makefile \
             solvers/DNS/dnsFoam/Makefile \
             solvers/multiphase/interFoam/Makefile \
             solvers/multiphase/interDyMFoam/Makefile \
             solvers/multiphase/compressibleInterFoam/Makefile \
             unitaryTests/testField/Makefile \
             unitaryTests/testMatrix/Makefile \
     	     unitaryTests/testMeshDictField/Makefile \
     	     make-deb.sh \
     	     deb-template/control \
     	     deb-template/Makefile \
     	     deb-template/postinst \
     	     deb-template/postrm \
	     Makefile \
	     include.exe.makefile \
	     include.lib.makefile \
	     include.makefile  ],
	     [ chmod 755 make-deb.sh ] )


echo "------------------------------------ OK -----------------------------------------"

